--- a/style/style.css
+++ b/style/style.css
@@ -136,10 +136,6 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-list.link.current {
-  color: var(--accent-color);
-}
-
 /* Main */
 .main {
   width: 1600px;
@@ -441,6 +437,9 @@ body {
   border-radius: 2px;
   justify-content: center;
   width: 100%;
+}
+.current {
+  color: var(--accent-color);
 }
 .header-item:not(:last-child) {
   margin-right: 50px;
