--- a/style/style.css
+++ b/style/style.css
@@ -817,6 +817,7 @@ body {
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+  padding: 40px 40px;
 }
 .modal-close-btn {
   position: absolute;
@@ -838,4 +839,172 @@ body {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+/* Form */
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+}
+.contact-form-text {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 12px;
+  color: #212121;
+}
+
+.contact-form-field {
+  margin-bottom: 10px;
+}
+
+.contact-form-field-span {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: var(--text-color);
+}
+
+.contact-form-input-wrapper {
+  position: relative;
+  margin-top: 4px;
+}
+
+.contact-form-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+  border-radius: 4px;
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  cursor: pointer;
+}
+
+.contact-form-input:focus,
+.contact-form-input:hover {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.contact-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  width: 18px;
+  height: 18px;
+  fill: var(--title-color);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-input:focus + .contact-form-icon,
+.contact-form-input:hover + .contact-form-icon {
+  fill: var(--accent-color);
+}
+
+.contact-form-comment {
+  cursor: pointer;
+  width: 100%;
+  height: 120px;
+  margin-top: 4px;
+  border-radius: 6px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  resize: none;
+  padding: 12px 16px;
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contact-form-comment::placeholder {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+.contact-form-comment:focus,
+.contact-form-comment:hover {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+/* checkbox */
+
+.contact-form-checkbox-label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  margin-bottom: 30px;
+}
+
+.contact-form-checkbox-label::before {
+  display: block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--title-color);
+  border-radius: 2px;
+  cursor: pointer;
+  content: "";
+  margin-right: 10px;
+}
+
+.contact-form-checkbox:checked + .contact-form-checkbox-label::before {
+  background-color: var(--accent-color);
+}
+
+.contact-form-checkbox:focus + .contact-form-checkbox-label::before {
+}
+/* checkbox */
+
+.contact-form-checkbox-label {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+}
+.contact-form-checkbox-link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+  text-decoration-line: underline;
+}
+
+.contact-form-send-btn {
+  font-weight: bold;
+  font-size: 16px;
+  text-align: center;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  border: none;
+  border-radius: 4px;
+  min-width: 200px;
+  min-height: 50px;
+  margin: auto;
+  color: var(--white-color);
+  background: var(--accent-color);
+  display: block;
+}
+
+.contact-form-send-btn:hover,
+.contact-form-send-btn:focus {
+  background-color: var(--accent-color);
+  color: #ffffff;
 }
