--- a/style/style.css
+++ b/style/style.css
@@ -64,6 +64,7 @@ body {
   --accent-color: #2196f3;
   --white-color: #ffffff;
   --social-icon-color: #afb1b8;
+  --button-accent-color: #188ce8;
 }
 .btn {
   cursor: pointer;
@@ -176,7 +177,7 @@ body {
 }
 .main-button:hover,
 .main-button:focus {
-  background-color: #188ce8;
+  background-color: var(--button-accent-color);
 }
 
 /* Hero */
@@ -282,7 +283,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--white-color);
 }
 
 .logo-white {
@@ -292,7 +293,7 @@ body {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: #ffffff;
+  color: var(--white-color);
 }
 
 .footer-contact-adress-link {
@@ -346,7 +347,7 @@ body {
 .portfolio-button:hover,
 .portfolio-button:focus {
   background-color: var(--accent-color);
-  color: #ffffff;
+  color: var(--white-color);
   cursor: pointer;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -431,7 +432,7 @@ body {
   content: "";
   display: block;
   position: absolute;
-  background-color: #2196f3;
+  background-color: var(--accent-color);
   bottom: 0;
   height: 4px;
   border-radius: 2px;
@@ -695,6 +696,57 @@ body {
   background-color: var(--accent-color);
 }
 
+/* foter subscribe form */
+.footer-subscribe {
+  margin-left: 93px;
+}
+
+.footer-subscribe-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-color);
+  margin-bottom: 20px;
+}
+.footer-subscribe-input {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+  width: 358px;
+  height: 50px;
+  border: 1px solid var(--text-color);
+  border-radius: 4px;
+  padding: 15px 0 15px 16px;
+}
+.footer-subscribe-btn {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  height: 50px;
+  background-color: var(--accent-color);
+  color: var(--white-color);
+  border: rgba(0, 0, 0, 0);
+  border-radius: 4px;
+  margin-left: 12px;
+  cursor: pointer;
+}
+.footer-subscribe-icon {
+  margin-left: 10px;
+  fill: var(--white-color);
+}
+
 /* portfolio */
 
 .portfolio-button-list {
@@ -834,6 +886,13 @@ body {
   cursor: pointer;
   padding: 0;
 }
+.modal-close-btn:hover .modal-close-btn-icon,
+.modal-close-btn:focus .modal-close-btn-icon {
+  fill: var(--accent-color);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .backdrop.is-hidden {
   opacity: 0;
@@ -876,6 +935,7 @@ body {
 }
 
 .contact-form-input {
+  position: relative;
   width: 100%;
   height: 40px;
   padding-left: 42px;
@@ -897,7 +957,6 @@ body {
   position: absolute;
   top: 50%;
   left: 12px;
-  transform: translateY(-50%);
   width: 18px;
   height: 18px;
   fill: var(--title-color);
@@ -925,7 +984,6 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-form-comment::placeholder {
-  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -962,13 +1020,19 @@ body {
 }
 
 .contact-form-checkbox:checked + .contact-form-checkbox-label::before {
-  background-color: #188ce8;
-  background-image: url(../images/icons.svg#icon-send-telegram);
-
+  background-color: var(--accent-color);
+  background-image: url(../images/icon-check.svg);
+  background-origin: border-box;
+  background-size: contain;
   border: var(--accent-color);
 }
 
+.contact-form-checkbox:hover + .contact-form-checkbox-label::before,
 .contact-form-checkbox:focus + .contact-form-checkbox-label::before {
+  border-color: var(--accent-color);
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* checkbox */
 
@@ -1004,10 +1068,15 @@ body {
   color: var(--white-color);
   background: var(--accent-color);
   display: block;
+  cursor: pointer;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .contact-form-send-btn:hover,
 .contact-form-send-btn:focus {
-  background-color: var(--accent-color);
-  color: #ffffff;
+  background-color: var(--button-accent-color);
+  color: var(--white-color);
 }
