--- a/style/style.css
+++ b/style/style.css
@@ -921,21 +921,17 @@ body {
 }
 
 .contact-form-field-span {
+  display: block;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
   color: var(--text-color);
-}
-
-.contact-form-input-wrapper {
-  position: relative;
-  margin-top: 4px;
+  margin-bottom: 4px;
 }
 
 .contact-form-input {
-  position: relative;
   width: 100%;
   height: 40px;
   padding-left: 42px;
@@ -945,6 +941,9 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid rgba(33, 33, 33, 0.2);
   cursor: pointer;
+}
+.contact-input-span {
+  position: relative;
 }
 
 .contact-form-input:focus,
@@ -956,6 +955,7 @@ body {
 .contact-form-icon {
   position: absolute;
   top: 50%;
+  transform: translateY(-50%);
   left: 12px;
   width: 18px;
   height: 18px;
